# kickbeats

./: .gitignore  CLAUDE.md  Cargo.toml  LANGUAGE_RESEARCH.md  README.md
examples/: test_midi.rs
specs/001-rhythm-practice-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rhythm-practice-tool/checklists/: requirements.md
specs/001-rhythm-practice-tool/contracts/: cli-interface.md
specs/002-web-audio-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-web-audio-app/checklists/: requirements.md
specs/002-web-audio-app/contracts/: AudioEngine.ts  PatternGenerator.ts  ServiceWorker.ts  SessionStorage.ts  UIComponents.ts  types.ts
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/engine/: midi.rs  mod.rs  playback.rs
src/generator/: mod.rs  unique.rs  weighted.rs
src/models/: beat_grid.rs  complexity.rs  mod.rs  pattern.rs  playback_state.rs  session.rs  time_signature.rs
src/visualizer/: ascii.rs  mod.rs
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: main.ts
web/src/audio/: AudioEngine.ts  AudioScheduler.ts  SoundSynthesis.ts
web/src/generator/: PatternGenerator.ts  WeightCalculator.ts
web/src/models/: BeatGrid.ts  Pattern.ts  Session.ts  types.ts
web/src/storage/: SessionStorage.ts
web/src/sw/: service-worker.ts
web/src/ui/components/: ComplexitySelector.ts  NewPatternButton.ts  PatternNotation.ts  (+4 more)
web/src/utils/: BrowserCompatibility.ts  KeyboardHandler.ts  VisibilityHandler.ts
(+7 files in other folders)
